[#277] Debug page bị hiển thị ở chế độ release
C&M: Chỉ hiển thị debug page ở chế độ debug

--- a/SPRNetTool/View/MainWindow.xaml
+++ b/SPRNetTool/View/MainWindow.xaml
@@ -14,6 +14,10 @@
 					   Height="765"
 					   StateChanged="OnWindowStateChanged"
 					   d:DesignWidth="1280">
+
+	<Window.DataContext>
+		<vm:MainWindowViewModel />
+	</Window.DataContext>
 	<Window.Resources>
 		<cvt:FormulaConverter x:Key="FormulaConverter" />
 	</Window.Resources>
